# oncue

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
apps/api/: .env.example  .gitignore  AGENTS.md  alembic.ini  docker-compose.yml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 6c018ddca19d_initial_schema.py  9a4e2bd17c61_deferred_tool_job_retry_columns.py
apps/api/src/oncue/: config.py  main.py  settings.py
apps/api/src/oncue/adapters/cache/: redis.py
apps/api/src/oncue/adapters/db/: postgresql.py
apps/api/src/oncue/adapters/llm/: anthropic.py
apps/api/src/oncue/adapters/music/: spotify.py
apps/api/src/oncue/adapters/stt/: deepgram.py
apps/api/src/oncue/adapters/telephony/: twilio.py
apps/api/src/oncue/adapters/tts/: elevenlabs.py
apps/api/src/oncue/api/: spotify.py  voice.py
apps/api/src/oncue/api/v1/: __init__.py
apps/api/src/oncue/dtos/: call.py  call_turn.py  deferred_tool_job.py  spotify_account.py  spotify_playback.py  user.py
apps/api/src/oncue/models/: __init__.py  call.py  call_turn.py  deferred_tool_job.py  spotify_account.py  user.py
apps/api/src/oncue/repositories/: call_repo.py  call_turn_repo.py  deferred_tool_job_repo.py  spotify_account_repo.py  user_repo.py
apps/api/src/oncue/services/: call_service.py  conversation_service.py  deferred_tool_service.py  spotify_service.py  user_service.py  voice_session_service.py
apps/api/src/oncue/tools/: __init__.py  base.py  spotify.py
apps/api/src/oncue/workers/: __init__.py  celery_app.py  tasks.py
apps/api/tests/: conftest.py  test_conversation_service.py  test_deferred_tool_service.py  test_spotify_adapter.py  test_spotify_service.py  test_stt_adapter.py  test_tools.py  test_tts_adapter.py  test_twilio_adapter.py  test_voice_routes.py  test_voice_session_service.py  test_voice_stream_route.py
apps/web/: AGENTS.md  package.json  vitest.config.ts
apps/web/app/: globals.css  (+3 more)
(+90 files in other folders)
