[tool.poetry]
name = "oncue"
version = "0.1.0"
description = "OnCue voice assistant API"
authors = ["Kevin Le"]
packages = [{ include = "oncue", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
fastapi = "^0.135.3"
uvicorn = {extras = ["standard"], version = "^0.44.0"}
pydantic = "^2.12.5"
httpx = "^0.28.1"
python-multipart = "^0.0.26"
twilio = "^9.10.4"
spotipy = "^2.26.0"
deepgram-sdk = "^6.1.1"
elevenlabs = "^2.42.0"
anthropic = "^0.94.0"
celery = "^5.6.3"
redis = "^7.4.0"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
asyncpg = "^0.31.0"
greenlet = "^3.4.0"
pydantic-settings = "^2.13.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.10"
mypy = "^1.20.0"
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
